# linky

./: .gitignore  build.bat  build.py  buildVars.py  docs.bat  manifest.ini.tpl  pyproject.toml  readme.md  test.bat
.github/workflows/: release.yml
addon/globalPlugins/: linky.py
